3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

server/c_object.c: fixed sack_can_hold for the 'won't fit' cast,
    missing 'return 0'
server/gods.c: applied Karla Stenger's patch, making sure 'praying' is
    applied when becoming fellower of a god
Ryo 2004-02-08

Changed map-building to work on non-unique maps too.
server/build_map.c: removed check for unique map.
Ryo 2004-01-19


Added map-building code. This lets players change unique maps,
    adding & removing walls, doors, stuff like that.
	New item types BUILDER & MATERIAL. New item flag FLAG_IS_BUILDABLE.
	New range attack (builder).
----
Changelog: change prescribed date format to be coherent with usage :)
common/loader.l: added 'is_buildable' flag.
include/define.h: added defines for item types & subtypes, and item flag.
include/player.h: new range type 'builder'.
include/spropo.h: new function apply_map_builder.
server/apply.c: handle new range type.
server/build_map.c: new file, handles all build-related code.
server/c_object.c: added 'buildable item' to examine function.
server/Makefile.am: added build_map.c to compilation.
server/player.c: handle new range type.
socket/info.c: handle new range type.
Ryo 2004-01-18


Fix a crash related to plugin hooks
common/object.c: clear_object(): object's event's hook/plugin/options
    are initialized with FREE_AND_COPY, so they are shared strings.
    Better to release'em with FREE_AND_CLEAR_STR instead of
    FREE_AND_CLEAR, else nice crashes...
Ryo 2004-01-16

Fix writing not inserting correctly item in inventory, and Windows-
    specific stuff too
server/skills.c: write_scroll(): Better to insert spell in scroll,
    and not the other way around