@@ -904,7 +904,12 @@ void fix_generated_item (object *op, object *creator, int difficulty,
 		    /* books w/ info are worth more! */
 		    op->value*=((op->level>10?op->level:(op->level+1)/2)*((strlen(op->msg)/250)+1));
 		    /* creator related stuff */
-		    if(QUERY_FLAG(creator,FLAG_NO_PICK)) /* for library, chained books! */
+
+		    /* for library, chained books.  Note that some monsters have no_pick
+		     * set - we don't want to set no pick in that case.
+		     */
+		    if(QUERY_FLAG(creator,FLAG_NO_PICK) &&
+		       !QUERY_FLAG(creator, FLAG_MONSTER))
 			SET_FLAG(op,FLAG_NO_PICK);
 		    if(creator->slaying&&!op->slaying) /* for check_inv floors */
 			op->slaying = add_string(creator->slaying);
