@@ -17,6 +17,15 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+common/object.c: Clean up formatting of copy_object.  Only real code change
+  is to fix events - copied event data wasn't getting malloc'd, and thus
+  when another object of that event was freed, it freed the event data
+  for all objects derived from it.
+common/treasure.c: Fix fix_generated_item() so that books generated by
+   monsters with no_pick set don't inherit that for the book itself. 
+   Still do it for other objects of the creator type.
+MSW 2004-02-08
+
 server/c_object.c: fixed sack_can_hold for the 'won't fit' cast,
     missing 'return 0'
 server/gods.c: applied Karla Stenger's patch, making sure 'praying' is
